# IB_MCP

./: .env.example  .gitignore  ENDPOINTS.MD  ENDPOINTS.md  FAST_MCP.md  LICENSE  README.md  docker-compose.yml  ib_async.md
.github/workflows/: docker-publish.yml
api_gateway/: Dockerfile  conf.yaml  healthcheck.sh  run_gateway.sh
ib_client_service/: Dockerfile  requirements.txt
ib_client_service/src/: service.py
mcp_server/: Dockerfile  client.py  config.py  fastapi_server.py  pyproject.toml  server.py  testing_client.py
mcp_server/routers/: alerts.py  trading_orders.py
routers/: alerts.py  contract.py  fa_allocation_management.py  fyis_and_notifications.py  market_data.py  scanner.py  trading_accounts_pro.py  trading_contracts_pro.py  trading_orders.py  trading_orders_base.py  trading_orders_pro.py
routers_generator/: Dockerfile  entrypoint.sh  requirements.txt
tickler/: Dockerfile  healthcheck.sh  run.sh
