[project]
name = "ib-fastmcp-server"
version = "0.1.0"
description = "FastMCP server for Interactive Brokers Web API"
authors = [
    {name = "Ruben Contesti", email = "rcontesti@gmail.com"}
]

requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.4.0",
    "httpx>=0.24.0",
    "urllib3>=2.0.0",
    "mcp>=0.5.0",
    "asyncio>=3.4.3",
]

[tool.uv]
dev-dependencies = []